does that mean im happy now?

--- a/hosts/oracle/minecraft/velocity/velocity.toml
+++ b/hosts/oracle/minecraft/velocity/velocity.toml
@@ -45,7 +45,7 @@ forwarding-secret-file = "forwarding.secret"
 # 
 # If your network runs one modpack consistently, consider using ping-passthrough = "mods"
 # instead for a nicer display in the server list.
-announce-forge = false
+announce-forge = true
 
 # If enabled (default is false) and the proxy is in online mode, Velocity will kick
 # any existing player who is online if a duplicate connection attempt is made.
@@ -77,9 +77,8 @@ enable-player-address-logging = true
 [servers]
 # Configure your servers here. Each key represents the server's name, and the value
 # represents the IP address of the server to connect to.
-lobby = "127.0.0.1:30066"
-factions = "127.0.0.1:30067"
-minigames = "127.0.0.1:30068"
+lobby = "127.0.0.1:30000"
+keira = "127.0.0.1:30001"
 
 # In what order we should try servers when a player logs in or is kicked from a server.
 try = [
@@ -88,14 +87,8 @@ try = [
 
 [forced-hosts]
 # Configure your forced hosts here.
-"lobby.example.com" = [
-    "lobby"
-]
-"factions.example.com" = [
-    "factions"
-]
-"minigames.example.com" = [
-    "minigames"
+"keira.play.alexjameswright.net" = [
+    "keira"
 ]
 
 [advanced]
