--- a/.github/workflows/flake-pr-check.yml
+++ b/.github/workflows/flake-pr-check.yml
@@ -12,6 +12,7 @@ jobs:
     timeout-minutes: 60
     env:
       NIXPKGS_ALLOW_UNFREE: "1"
+      NIX_CONFIG: "access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}"
     steps:
       - uses: actions/checkout@v5
         with:
