--- a/.github/workflows/flake-update.yml
+++ b/.github/workflows/flake-update.yml
@@ -18,7 +18,8 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 60
     env:
-       NIXPKGS_ALLOW_UNFREE: "1"
+      NIXPKGS_ALLOW_UNFREE: "1"
+      NIX_CONFIG: "access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}"
     steps:
       - uses: actions/checkout@v5
         with:
