--- a/.github/workflows/flake-pr-check.yml
+++ b/.github/workflows/flake-pr-check.yml
@@ -1,4 +1,4 @@
-name: Nix flake check
+name: Nix Flake check
 
 on:
   pull_request:
@@ -13,11 +13,16 @@ jobs:
     env:
       NIXPKGS_ALLOW_UNFREE: "1"
     steps:
-      - uses: actions/checkout@v5
+      - name: Checkout
+        uses: actions/checkout@v5
         with:
           fetch-depth: 0
-      - uses: DeterminateSystems/nix-installer-action@main
-      - uses: DeterminateSystems/magic-nix-cache-action@main
+
+      - name: Install Nix
+        uses: DeterminateSystems/nix-installer-action@main
+
+      - name: Install Nix Cache
+        uses: DeterminateSystems/magic-nix-cache-action@main
 
       - name: Run flake-checker
         uses: DeterminateSystems/flake-checker-action@main
@@ -26,4 +31,4 @@ jobs:
         shell: bash
         run: |
           set -euxo pipefail
-          nix flake check -L
+          nix flake check -L --access-tokens github.com=${{ secrets.GH_TOKEN_FOR_UPDATES }}
