--- a/.github/workflows/flake-pr-check.yml
+++ b/.github/workflows/flake-pr-check.yml
@@ -17,6 +17,9 @@ jobs:
         uses: actions/checkout@v5
         with:
           fetch-depth: 0
+     
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@main
@@ -31,4 +34,4 @@ jobs:
         shell: bash
         run: |
           set -euxo pipefail
-          nix flake check -L --access-tokens github.com=${{ secrets.GH_TOKEN_FOR_UPDATES }}
+          nix flake check -L --extra-platforms aarch64-linux --access-tokens github.com=${{ secrets.GH_TOKEN_FOR_UPDATES }}
